tests/compile-fail/unsupported_path.stderr
error: unsupported path
 --> tests/compile-fail/unsupported_path.rs:6:14
  |
6 | #[enum_tools(crate::sorted(value))]
  |              ^^^^^^^^^^^^^
